<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Split It</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add_expense">Enter New Split</string>
    <string name="resolve_expense">Enter Payment</string>
    <string name="recipient">Recipient</string>
    <string name="add_group">Add Group</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="dolla">$1.23</string>
    <string name="vendor">Vendor</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="parties">Parties</string>
    <string name="submit">Submit</string>
    <string name="new_split">NEW</string>
    <string name="pay">PAYMENTS</string>
    <string name="charge">CHARGES</string>
    <string name="cancel">Cancel</string>
    <string name="create_user">Create User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number (digits only)</string>
    <string name="venmo_id">Venmo Username</string>
    <string name="payments">Payments</string>
    <string name="pending">pending</string>
    <string name="contacts">View Contacts</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="splitwith">Split It With</string>
    <string name="pay_now">PAY NOW</string>
    <string name="no_results">No results found!</string>

</resources>