<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/first_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/faded_grey" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/firstNameInput"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/last_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/faded_grey" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lastNameLabel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/dark_grey" />

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lastNameInput"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/faded_grey" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phoneNumberLabel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/dark_grey" />

    <TextView
        android:id="@+id/venmoIdLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phoneNumberInput"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/venmo_id"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/faded_grey" />

    <EditText
        android:id="@+id/venmoIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/venmoIdLabel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/dark_grey" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_below="@+id/venmoIdInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        android:text="@string/submit"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/firstNameLabel"
        android:layout_toLeftOf="@+id/title"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submitButton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:text="@string/create_user"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/firstNameLabel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/dark_grey" />

</RelativeLayout>