<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/menuBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-20dp"
        android:paddingTop="0dp"
        android:src="@drawable/menubg" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/paymentsButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/activebutton"
        android:text="@string/pay"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/paymentsButton"
        android:background="@drawable/inactivebutton"
        android:clickable="true"
        android:text="@string/new_split"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/chargesButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/paymentsButton"
        android:background="@drawable/inactivebutton"
        android:clickable="true"
        android:text="@string/charge"
        android:textColor="@color/green" />

    <ImageView
        android:id="@+id/cashImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/venmoImageButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:src="@drawable/cashthin" />

    <TextView
        android:id="@+id/amountLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recipientLabel"
        android:layout_centerVertical="true"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/faded_grey" />

    <ImageView
        android:id="@+id/venmoImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cashImageButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/venmothin" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menuBackground"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/resolve_expense"
        android:textColor="@color/green"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/recipientLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/amountInput"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:text="@string/recipient"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/faded_grey" />

    <TextView
        android:id="@+id/recipientText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipientLabel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dark_grey" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/recipientText"
        android:layout_below="@+id/amountLabel"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

</RelativeLayout>