<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/menuBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-20dp"
        android:paddingTop="0dp"
        android:src="@drawable/menubg" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="10dp"
        android:text="Shit Head"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/menuBackground" >
    </ListView>

    <Button
        android:id="@+id/paymentsButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/inactivebutton"
        android:text="@string/pay"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/paymentsButton"
        android:background="@drawable/inactivebutton"
        android:clickable="true"
        android:text="@string/new_split"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/chargesButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/paymentsButton"
        android:background="@drawable/inactivebutton"
        android:clickable="true"
        android:text="@string/charge"
        android:textColor="@color/green" />

</RelativeLayout>