<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@color/green"
        android:text="@string/add_expense"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/paymentsLabel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/addExpenseButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/light_grey"
        android:gravity="left"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:text="@string/pay"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_grey" />

    <TextView
        android:id="@+id/paymentAmountLabel"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignRight="@+id/paymentsLabel"
        android:layout_alignTop="@+id/paymentsLabel"
        android:gravity="right"
        android:paddingRight="25dp"
        android:paddingTop="12dp"
        android:text="$141.50"
        android:textColor="@color/money_red"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/chargesLabel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/addExpenseButton"
        android:layout_below="@+id/addExpenseButton"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:background="@color/light_grey"
        android:gravity="left"
        android:paddingLeft="25dp"
        android:paddingTop="20dp"
        android:text="@string/charge"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_grey" />

    <TextView
        android:id="@+id/chargeAmountLabel"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignRight="@+id/chargesLabel"
        android:layout_alignTop="@+id/chargesLabel"
        android:gravity="right"
        android:paddingRight="25dp"
        android:paddingTop="12dp"
        android:text="$85.70"
        android:textColor="@color/money_green"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:paddingRight="8dp"
        android:src="@drawable/noshadlogo" />

</RelativeLayout>