<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/menuBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-20dp"
        android:paddingTop="0dp"
        android:src="@drawable/menubg" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="10dp"
        android:text="Pirate Rob"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/paymentsButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/inactivebutton"
        android:text="@string/pay"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/paymentsButton"
        android:background="@drawable/inactivebutton"
        android:clickable="true"
        android:text="@string/new_split"
        android:textColor="@color/green" />

    <Button
        android:id="@+id/chargesButton"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/paymentsButton"
        android:background="@drawable/activebutton"
        android:clickable="true"
        android:text="@string/charge"
        android:textColor="@color/green" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/firstNameInput"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/dark_grey" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/quickContactBadge1"
        android:layout_alignParentLeft="true"
        android:layout_margin="0dp"
        android:paddingLeft="97dp"
        android:text="$25.00"
        android:textColor="@color/money_green"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:paddingLeft="100dp"
        android:text="Aimee Kim"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <QuickContactBadge
        android:id="@+id/quickContactBadge1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submitButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newButton"
        android:layout_marginBottom="22dp"
        android:layout_marginRight="36dp"
        android:layout_toLeftOf="@+id/paymentsButton" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_above="@+id/listView1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/green"
        android:text="PAY NOW"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >
    </ListView>

</RelativeLayout>